# nvm-desktop

./: .gitignore  .prettierignore  .prettierrc.yaml  .yarnrc  LICENSE  README-zh_CN.md  README.md  UPDATELOG.md  components.json  electron.vite.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.test.json  tsconfig.web.json  vite.config.ts  wdio.conf.ts
.erb/configs/: webpack.config.base.ts  webpack.config.main.prod.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: close-inactive-issues.yml  pre-release.yml  release.yml  updater.yml
@types/: i18n.d.ts  index.d.ts  table.d.ts
_locales/en/: messages.json
_locales/zh_CN/: messages.json
assets/: nvmd.sh
assets/darwin/: nvmd
release/app/: package-lock.json  package.json
scripts/: check.mjs  electron-rebuild.mjs  link-modules.mjs  notarize.cjs  paths.mjs  updater-fixed-webview2.mjs  updater.mjs
src/: app-context.tsx  app.tsx  global.css  index.html  main.tsx  routes.tsx  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json  webview2.arm64.json  webview2.x64.json
src-tauri/capabilities/: default.json
src-tauri/crates/get-node/: Cargo.toml
src-tauri/crates/get-node/src/: lib.rs  list.rs  node.rs
src-tauri/crates/get-node/src/archive/: fs_utils.rs  mod.rs  node.rs  tarball.rs  zip.rs
src-tauri/crates/progress-read/: Cargo.toml
src-tauri/icons/: icon.icns
src-tauri/src/: cmds.rs  main.rs
src-tauri/src/config/: config.rs  draft.rs  groups.rs  mod.rs  node.rs  projects.rs  settings.rs
src-tauri/src/core/: configration.rs  group.rs  handle.rs  mod.rs  node.rs  project.rs  tray.rs  update.rs
src-tauri/src/node/: core.rs  current.rs  get_node.rs  list.rs  mod.rs
src-tauri/src/utils/: dirs.rs  help.rs  migrate.rs  mod.rs  resolve.rs  tray.rs
src-tauri/templates/: nsis-hooks.nsh  nvm-desktop.desktop
src/__tests__/specs/: api.spec.ts  dom.spec.ts  nvmd.spec.ts  setting.spec.ts  test.e2e.ts
src/components/: error-boundary.tsx  theme-customizer.tsx
src/components/ui/: alert-dialog.tsx  auto-complete.tsx  button.tsx  checkbox.tsx  command.tsx  data-dnd-table.tsx  data-table-column-filter-header.tsx  data-table-column-sort-header.tsx  data-table-faceted-filter.tsx  data-table-toolbar.tsx  data-table-view-options.tsx  data-table.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  index.ts  input.tsx  ip-input.tsx  label.tsx  multi-select.tsx  navigation-menu.tsx  popover.tsx  progress.tsx  radio-group.tsx  select.tsx  separator.tsx  sheet.tsx  sonner.tsx  switch.tsx  table.tsx  tag.tsx  tooltip.tsx
src/lib/utils/: apply-theme.ts  compare.ts  get-system.ts  index.ts
src/locales/: en.json  zh_CN.json
src/main/: constants.ts  i18n.ts  locale.ts  main.test.ts  main.ts  menu.ts  preload.test.ts  preload.ts  updater.ts
src/main/utils/: configration.ts  dirname.ts  groups.ts  migration.ts  nvmdShell.ts  projects.ts  resolvePath.ts  setting.ts  version.ts
src/pages/groups/: group-creator.tsx  index.tsx
src/pages/home/: configration.tsx  index.tsx  intro.css  setting.tsx  tip.tsx  updater.tsx
src/pages/installed/: index.tsx
src/pages/projects/: index.tsx
src/pages/versions/: index.tsx  modal.tsx
src/preload/: index.ts  preload.d.ts  preload.test.ts
src/renderer/: App.scss  App.tsx  appContext.ts  hooks.tsx  index.ejs  index.html  preload.d.ts  routes.tsx  util.ts
src/renderer/components/ErrorBoundary/: index.tsx
src/renderer/components/VirtualTable/: index.tsx
src/renderer/pages/home/: index.tsx  setting.tsx  styles.scss  tip.tsx  updater.tsx
src/renderer/pages/installed/: index.tsx  styles.scss
src/renderer/pages/projects/: index.tsx  styles.scss
src/renderer/pages/versions/: index.tsx  modal.tsx  styles.scss  util.ts
src/renderer/src/: App.scss  App.tsx  app-context.ts  app-context.tsx  app.tsx  appContext.ts  global.css  hooks.tsx  index.tsx  routes.tsx  styles.scss  util.ts
src/renderer/src/components/: error-boundary.tsx  theme-customizer.tsx
src/renderer/src/components/VirtualTable/: styles.scss
src/renderer/src/components/ui/: alert-dialog.tsx  auto-complete.tsx  badge.tsx  bars-icon.tsx  button.tsx  checkbox.tsx  command.tsx  data-dnd-table.tsx  data-table-column-filter-header.tsx  data-table-column-sort-header.tsx  data-table-faceted-filter.tsx  data-table-toolbar.tsx  data-table-view-options.tsx  data-table.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  index.ts  input.tsx  ip-input.tsx  label.tsx  multi-select.tsx  navigation-menu.tsx  popover.tsx  progress.tsx  radio-group.tsx  select.tsx  separator.tsx  sheet.tsx  skeleton.tsx  sonner.tsx  switch.tsx  table.tsx  tag.tsx  tooltip.tsx
src/renderer/src/hooks/: index.ts  use-copy-to-clipboard.ts  use-event-callback.tsx
src/renderer/src/pages/groups/: group-creator.tsx  index.tsx
src/renderer/src/pages/home/: configration.tsx  index.tsx  progress.css  setting.tsx  styles.scss  tip.tsx  updater.tsx
src/renderer/src/pages/installed/: index.tsx
src/renderer/src/pages/projects/: index.tsx  styles.scss
src/renderer/src/pages/versions/: index.tsx  modal.tsx  styles.scss
src/services/: api.ts  cmds.ts  i18n.ts
