[package]
name = "nvm-desktop"
version = "4.0.2"
description = "Node Version Manager Desktop - A desktop application to manage multiple active node.js versions."
authors = ["The1111mp@outlook.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
dirs = "5.0"
futures = "0.3"
get-node = { path = "crates/get-node" }
log = "0.4"
once_cell = "1.19"
open = "5"
parking_lot = "0.12"
tauri = { version = "2.0", features = [
	"image-ico",
	"image-png",
	"macos-private-api",
	"protocol-asset",
	"tray-icon",
	"devtools",
] }
tauri-plugin-dialog = "2.0"
tauri-plugin-log = { version = "2.0", features = ["colored"] }
tauri-plugin-shell = "2.0"
tauri-plugin-single-instance = "2.0"
tauri-plugin-updater = "2.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
version-compare = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
