[package]
name = "get-node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
cfg-if = "1"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
async-tar = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
